--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
 pyOpenSSL==20.0.1
+python-dotenv==0.19.2
 python-memcached==1.59
 pytz==2021.1
 redis==3.5.3
@@ -44,6 +45,7 @@ soupsieve==2.3.1
 sqlparse==0.4.1
 static3==0.7.0
 Twisted==21.2.0
+twisted-iocpsupport==1.0.1
 txaio==21.2.1
 urllib3==1.25.11
 whitenoise==5.3.0
